# COURS

./: .gitignore  .gitmodules
Collège/: Article%20Petit%20Bleu.docx  fichier%201%20-Liste%20des%20%C3%A9l%C3%A8ves%20avec%20jurys%20et%20salles.docx  fichier%202%20-Jurys%201%20%C3%A0%20%203%20%20avec%20horaires.docx  fichier%203%20-%20Jurys%204%20%C3%A0%2010%20avec%20horaires.docx
Fac/L1/: framatest-incroyable-9rmi.txt  framatest-incroyable-9rmiV2.html
Fac/L1/Premier Semestre/CNMC/CN/: Chocolat.pptx  Séance 5,6 Thomas-Alexandre Moreau.xlsx  (+3 more)
Fac/L1/Premier Semestre/Info/: Cours.docx
Fac/L1/Premier Semestre/Maths App/: Cours.docx  TD.docx
Fac/L1/Premier Semestre/Physique/: 360p.trk  Cours.docx  NOTER.txt  TD.docx
Fac/L1/Second Semestre/Algèbre linéaire/: Cours.docx  TD.docx
Fac/L1/Second Semestre/Anglais/: Know about each other.docx  Numbers.docx
Fac/L1/Second Semestre/Initiation Prog C/: Cours.docx
Fac/L1/Second Semestre/Méthodologie Scientifique/: Méthodologie.docx
Fac/L1/Second Semestre/Prog Web - Bases de données/: Cours.docx
Fac/L1/Second Semestre/Projet Technologique/: Exigences.docx
Fac/L2/Premier semestre/Algo/: TD.docx  TD.md  liste simplement chainee.c
Fac/L2/Premier semestre/Combi, Proba, Stats/: COURS.docx  TD.docx
Fac/L2/Premier semestre/Filmer la science/: COURS  PTDR.docx
Fac/L2/Premier semestre/Ouverture Pro/: 2022 trame rapport OP2.rtf  CV.docx  CV.odt  Lettre de motivation.docx
Fac/L2/Premier semestre/Prog C/: COURS.docx  TD révision.md
Fac/L2/Premier semestre/Projet Tech/: COURS.docx  Makefile  hello.c
Fac/L2/Premier semestre/Réseau/: Cours.docx  Rapport TP1 TP2.docx  Rapport TP3 TP4.docx  Rapport TP5.docx  Rapport TP6.docx  TD.docx
Fac/L2/Projet Tech/: COURS.md
Fac/L2/Projet Tech/Ancien takuzu-02e/: CMakeLists.txt  game.c  game_aux.c  game_ext.c  game_struct.h  game_test_thmoreau.c  game_text.c  game_tools.c  game_tools.h
Fac/L2/Projet Tech/TAKUZU QUAND CONFLIT PULL/: CMakeLists.txt  game_test_thmoreau.c  model.c
Fac/L2/Projet Tech/TD11/: binword  binword_rec
Fac/L2/Projet Tech/TD12/: TD.md
Fac/L2/Projet Tech/TD13/: first.tex  second.tex
Fac/L2/Projet Tech/TD8/: questionnaire.md
Fac/L2/Projet Tech/TD8/07B/: CMakeLists.txt  README.md  game.c  game.h  game_aux.c  game_ext.c  game_struct.h  game_test_ecallet.c  game_test_ninteyineza.c  game_test_pdinghin.c  game_text.c  index-1.html
Fac/L2/Second semestre/Algo struct arbo/: COURS.md  TD.md  basic funcs.ml  test.ml
Fac/L2/Second semestre/Architech/: COURS.odt  RenduArchi1.md  TD.md  TD.odt  TM.md  archi_arith.md  archi_y86.md  archi_y86_cablage.md  rendu1.ys
Fac/L2/Second semestre/POO/: COURS.md  Main.java  Rectangle.java
Fac/L3/Algorithmique des graphes/: TD.md  imageTD2.2
Fac/L3/Anglais/: diapo2.odp  texte-oral.odt
Fac/L3/Modèles Program et Calcul/: TD.md  image1
Fac/L3/Programmation Fonctionnelle/: TD.ml
Fac/L3/Programmation Fonctionnelle/Moodle/: rotate_left.ml  suffix.ml
Fac/L3/Programmation Fonctionnelle/TD10/: td.ml
Fac/L3/Programmation Fonctionnelle/TD11/: td.ml
Fac/L3/Programmation Fonctionnelle/TD4/: test_mycomplex.ml
Fac/L3/Programmation Fonctionnelle/TD6/: a.out  td.cmi  td.cmo  td.ml
Fac/L3/Programmation Fonctionnelle/TD9/: td.ml
Fac/L3/Programmation Fonctionnelle/tests DS/: funcs.ml  test.ml
Fac/L3/Programmation Système/: COURS.md  TD.md
Fac/L3/Programmation Système/Moodle/: a.out  myls  myls.c  oui.c  truc.c
Fac/L3/Programmation Système/Projet Shell/: Evaluation.c
Fac/L3/Programmation Système/TD 1/: TD1.md  afficher  afficher.c  copy.c  fcopy  indexer  indexer.c  lire-entier  lire-entier.c  mytee  mytee.c  test
Fac/L3/Programmation Système/TD 1.5/: mytail  test
Fac/L3/Programmation Système/TD1/: afficher.c  copy  ecrire-entier.c  lire-entier.c  redirection.c  test.idx
Fac/L3/Programmation Système/TD3/: faux-pipe  faux-pipe.c  temp  vrai-pipe.c
Fac/L3/Programmation Système/TD4/: ctrlc_boucle  ctrlc_boucle.c  signaux-pere-fils  signaux-pere-fils.c  suivre-commandes  trap
Fac/L3/Programmation Système/TD5/: for-en-parallele  for-en-parallele.c  hello-goodbye  hello-goodbye.c  suivre-commandes
Fac/L3/Programmation Système/correction/: ._afficher.c  error.h  indexer.c  new-afficher  new-afficher.c
Fac/L3/Programmation Système/entrainement DS/: test.c
Fac/L3/Programmation Système/exemples_1/: ._error.h  ._small.txt  ecriture.c  lecture.c
Fac/L3/Programmation Système/exemples_2/: ._reverse.c  close-zero.c  create-big-file.c  reverse.c  seek.c
Fac/L3/Programmation Système/exemples_3/: Makefile  file.txt  monitor.c  server.c
Fac/L3/Programmation Système/exemples_4/: exec  exec.c  first-fork  first-fork.c  fork  forkfork  getpid  print  vars-n-fork  vars-n-fork.c  wait
Fac/L3/Programmation Système/exemples_5/: pipe-n-exec.c  pipe-n-fork.c
Fac/L3/Programmation Système/exemples_6/: ._sig.c  catch  catch.c  child  child.c  longjmp.c  mask  mask.c  sig  tempo-catch.c
Fac/L3/Programmation Système/projet_shell_2/: Evaluation.c  OUTPUT  Shell
Fac/L3/S1/Algorithmique des graphes/: COURS.md  TD.md  image1
Fac/L3/S1/Modèles Program et Calcul/: COURS.md  TD.md  image2  image3
Fac/L3/S1/Programmation Fonctionnelle/: COURS.md  TD.md
Fac/L3/S1/Programmation Système/: corr DS.md
Fac/L3/S2/Compilation/: cours_car_plus_batterie.md  train.ml
Fac/L3/S2/Compilation/TD4/compiler/course_language/: dune  interpreter.ml
Fac/L3/S2/Compilation/TD4/td_4/dyck_parser/: Dyck_left.mly  Dyck_right.mly  Dyck_simple.mly  Lexer.mll  dune
Fac/L3/S2/Tech_algo_prog/: cours_car_plus_batterie.md
Fac/L3/Sensibilisation Eco/: carnet_de_bord.md
Fac/L3/Sensibilisation Eco/tp_conso_appareils_menagers/: tp.md
Lycée/ANGLAIS/: Story tale.docx  THE TRIAL[80].docx
Lycée/EPS/: 1ère muscu fiche suivi séance.ods
Lycée/ESPAGNOL/: Script.docx  flyer.pub
Lycée/FRANCAIS/: Fiche de lecture.docx  fiche biographique.odt
Lycée/PasCoolLeCorona/PREMIERE/Anglais/: Doc 1 Diversity in the workplace.odt  Doc 2 Mirroring society.odt
Lycée/PasCoolLeCorona/PREMIERE/Physique-Chimie/: 1ere_chapitre2_python_systeme_chimique.odt
(+1740 files in other folders)
